fix: Fix title UI width collapse and mobile version label

--- a/style.css
+++ b/style.css
@@ -440,6 +440,8 @@ body {
 #title-ui-content {
     position: absolute;
     bottom: 10vh;
+    left: 0;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
